Feat: Adding static tarot card description page

--- a/Projeto Completo/styles/typography.css
+++ b/Projeto Completo/styles/typography.css
@@ -41,6 +41,7 @@ html {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Amarante", serif;
+  margin-bottom: var(--size-md);
 }
 
 h1, .font-size-h1 {font-size: var(--size-h1);}
