--- a/Projeto Completo/styles/components/card.css
+++ b/Projeto Completo/styles/components/card.css
@@ -6,8 +6,12 @@
   background-color: var(--white);
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  padding: var(--size-xs);
+  padding: var(--size-lg);
   border-radius: var(--size-xs);
+}
+
+.card.card--xs {
+  padding: var(--size-xs);
 }
 
 .card:hover {
