--- a/Projeto Completo/styles/main.css
+++ b/Projeto Completo/styles/main.css
@@ -45,7 +45,12 @@ p {
   line-height: 1.5;
 }
 
+p + p {
+  margin-top: var(--size-md);
+}
+
 a, a:hover, a:visited, a:focus {
   color:inherit;
   text-decoration: none;
 }
+
