Feat: Adding more pages and changing initial page

--- a/Projeto/styles/components/index.css
+++ b/Projeto/styles/components/index.css
@@ -6,4 +6,5 @@
 @import url("./button.css");
 @import url("./card.css");
 @import url("./list.css");
+@import url("./nav-menu.css");
 @import url("./text-input.css");
