--- a/Projeto/styles/variables.css
+++ b/Projeto/styles/variables.css
@@ -23,6 +23,7 @@
   --size-md: 1rem;
   --size-sm: 0.8rem;
   --size-xs: 0.5rem;
+  --size-xxs: 0.25rem;
 }
 
 /* Variáveis de tamanhos padrões de telas para site responsivo */
