--- a/Projeto/styles/main.css
+++ b/Projeto/styles/main.css
@@ -12,6 +12,7 @@
 
 @import url("./reset.css");
 @import url("./variables.css");
+@import url("./font-icons.css");
 @import url("./typography.css");
 
 @import url("./utils/index.css");
