Feat: Creating date input component style

--- a/Projeto/styles/components/index.css
+++ b/Projeto/styles/components/index.css
@@ -5,6 +5,7 @@
 
 @import url("./button.css");
 @import url("./card.css");
+@import url("./date-input.css");
 @import url("./list.css");
 @import url("./nav-menu.css");
 @import url("./text-input.css");
