Feat: Adding how it works to luck of day

--- a/Projeto/styles/components/button.css
+++ b/Projeto/styles/components/button.css
@@ -22,3 +22,8 @@ button.primary:hover:not(:active) {
   background-color: var(--primary-light);
   color: var(--white);
 }
+
+button.link {
+  color: var(--primary-light);
+  background-color: transparent;
+}
